HRU-9605: Fix for grid column filter overlapped by checkbox

--- a/grails-app/assets/stylesheets/bootstrap/css/bootstrap.css
+++ b/grails-app/assets/stylesheets/bootstrap/css/bootstrap.css
@@ -1867,6 +1867,7 @@ legend {
 label {
   display: inline-block;
   margin-bottom: 5px;
+  margin-left:20px;
   font-weight: bold;
 }
 
